[gd_scene load_steps=6 format=2]

[ext_resource path="res://Menu.gd" type="Script" id=1]
[ext_resource path="res://art2d/bg.png" type="Texture" id=2]
[ext_resource path="res://font/riffic.otf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 3 )

[node name="Menu" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_top = 100.0
margin_right = -30.0
margin_bottom = -100.0
script = ExtResource( 1 )

[node name="bg" type="Sprite" parent="."]
position = Vector2( 270.032, 142.939 )
texture = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 964.0
margin_bottom = 400.0
custom_constants/separation = 30

[node name="INSECTOTUEURS" type="Label" parent="VBoxContainer"]
margin_right = 964.0
margin_bottom = 43.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.482353, 0.0823529, 0.0823529, 1 )
text = "INSECTOTUEURS"
align = 1

[node name="Nouvelle Partie" type="MenuButton" parent="VBoxContainer"]
margin_top = 73.0
margin_right = 964.0
margin_bottom = 113.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.247059, 0.247059, 0.247059, 1 )
custom_colors/font_color_hover = Color( 0.482353, 0.0823529, 0.0823529, 1 )
text = "Nouvelle partie"

[node name="Regles" type="MenuButton" parent="VBoxContainer"]
margin_top = 143.0
margin_right = 964.0
margin_bottom = 183.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.247059, 0.247059, 0.247059, 1 )
custom_colors/font_color_hover = Color( 0.482353, 0.0823529, 0.0823529, 1 )
text = "RÃ¨gles"

[node name="Quitter" type="MenuButton" parent="VBoxContainer"]
margin_top = 213.0
margin_right = 964.0
margin_bottom = 253.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.247059, 0.247059, 0.247059, 1 )
custom_colors/font_color_hover = Color( 0.482353, 0.0823529, 0.0823529, 1 )
text = "Quitter"

[connection signal="pressed" from="VBoxContainer/Nouvelle Partie" to="." method="_on_Nouvelle_Partie_pressed"]
[connection signal="pressed" from="VBoxContainer/Regles" to="." method="_on_Regles_pressed"]
[connection signal="pressed" from="VBoxContainer/Quitter" to="." method="_on_Quitter_pressed"]
